@@ -1,3 +1,7 @@
+
+* add functions to fit multiple Gaussian to a spectrum
+* add tests to released files
+
 v0.99.1, 2013-07-03
 
 * documentation updates
